bug 79837, r=pinkerton, sr=alecf, a=asa, don't disable mime matching for Internet Config mappings if we didn't get passed in a file extension